# CodeResume

./: .gitignore  Cargo.toml  LICENSE  P0_2_PUBLISHING_COMPLETE.md  P0_3_TEMPLATE_ANALYSIS.md  P0_FILE_LOCATIONS.txt  P0_FINDINGS.md  P0_INDEX.md  P0_ONE_PAGER.txt  P0_PHASE_1_COMPLETION.md  P0_QUICK_SUMMARY.txt  PUBLISHING.md  README.md  README_P0_IMPROVEMENTS.md  TEMPLATE_CUSTOMIZATION.md
.github/workflows/: ci.yml  release.yml
crates/cr-ai/: Cargo.toml
crates/cr-ai/src/: lib.rs  response.rs
crates/cr-ai/src/prompts/: expand.rs  mod.rs  parse.rs  review.rs  rewrite.rs  tailor.rs
crates/cr-ai/src/provider/: claude.rs  mock.rs  mod.rs  openai.rs
crates/cr-cli/: Cargo.toml
crates/cr-cli/src/: display.rs  main.rs
crates/cr-cli/src/commands/: config.rs  generate.rs  mod.rs  new.rs  optimize.rs  review.rs  tailor.rs  templates.rs  validate.rs
crates/cr-config/: Cargo.toml
crates/cr-config/src/: lib.rs  model.rs  storage.rs
crates/cr-core/: Cargo.toml
crates/cr-core/src/: error.rs  jd.rs  lib.rs  resume.rs  scoring.rs  template.rs
crates/cr-io/: Cargo.toml
crates/cr-io/src/: data_file.rs  json.rs  lib.rs  markdown.rs  pdf_parse.rs  yaml.rs
crates/cr-render/: Cargo.toml
crates/cr-render/src/: data_bridge.rs  engine.rs  lib.rs  template_registry.rs
crates/cr-service/: Cargo.toml
crates/cr-service/src/: context.rs  create.rs  generate.rs  lib.rs  optimize.rs  review.rs  tailor.rs
sample-data/: example-en.yaml  example-zh.yaml
scripts/homebrew/: coderesume.rb
templates/academic/: meta.toml  template.typ
templates/ats-simple/: meta.toml  template.typ
templates/brilliant/: meta.toml  template.typ
templates/classic/: meta.toml  template.typ
templates/minimal/: meta.toml  template.typ
templates/modern/: meta.toml  template.typ
templates/two-column/: meta.toml  template.typ
