[workspace]
resolver = "2"
members = [
    "crates/cr-core",
    "crates/cr-config",
    "crates/cr-io",
    "crates/cr-ai",
    "crates/cr-render",
    "crates/cr-service",
    "crates/cr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CodeResume Contributors"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI
async-openai = "0.23"

# Misc
tempfile = "3"
dirs = "5"

# Workspace crates - with version specs for publishing
cr-core = { path = "crates/cr-core", version = "0.1.0" }
cr-config = { path = "crates/cr-config", version = "0.1.0" }
cr-io = { path = "crates/cr-io", version = "0.1.0" }
cr-ai = { path = "crates/cr-ai", version = "0.1.0" }
cr-render = { path = "crates/cr-render", version = "0.1.0" }
cr-service = { path = "crates/cr-service", version = "0.1.0" }
cr-cli = { path = "crates/cr-cli", version = "0.1.0" }
