[package]
name = "cr-ai"
version.workspace = true
edition.workspace = true

[dependencies]
cr-core.workspace = true
cr-config.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
