[package]
name = "cr-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI provider integration for resume optimization (Claude, OpenAI)"
repository = "https://github.com/ruiyli/CodeResume"
homepage = "https://github.com/ruiyli/CodeResume"
categories = ["api-bindings"]
keywords = ["ai", "claude", "openai", "resume", "llm"]

[dependencies]
cr-core.workspace = true
cr-config.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
