[package]
name = "cr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coderesume"
path = "src/main.rs"

[dependencies]
cr-core.workspace = true
cr-config.workspace = true
cr-service.workspace = true
cr-render.workspace = true
cr-io.workspace = true
cr-ai.workspace = true
clap.workspace = true
inquire.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
