[package]
name = "cr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-powered, ATS-friendly resume generator with Typst templates"
repository = "https://github.com/ruiyli/CodeResume"
homepage = "https://github.com/ruiyli/CodeResume"
categories = ["command-line-utilities", "graphics", "text-processing"]
keywords = ["resume", "pdf", "ai", "typst", "cv"]
readme = "../../README.md"

[[bin]]
name = "coderesume"
path = "src/main.rs"

[dependencies]
cr-core.workspace = true
cr-config.workspace = true
cr-service.workspace = true
cr-render.workspace = true
cr-io.workspace = true
cr-ai.workspace = true
clap.workspace = true
inquire.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
