[package]
name = "cr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI-powered, ATS-friendly resume generator with Typst templates"
repository = "https://github.com/ruiyli/CodeResume"
homepage = "https://github.com/ruiyli/CodeResume"
categories = ["command-line-utilities", "graphics", "text-processing"]
keywords = ["resume", "pdf", "ai", "typst", "cv"]
readme = "../../README.md"

[[bin]]
name = "coderesume"
path = "src/main.rs"

[dependencies]
cr-core = { path = "../cr-core", version = "0.1" }
cr-config = { path = "../cr-config", version = "0.1" }
cr-service = { path = "../cr-service", version = "0.1" }
cr-render = { path = "../cr-render", version = "0.1" }
cr-io = { path = "../cr-io", version = "0.1" }
cr-ai = { path = "../cr-ai", version = "0.1" }
clap.workspace = true
inquire.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
