[package]
name = "cr-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Configuration management for CodeResume settings and AI provider setup"
repository = "https://github.com/ruiyli/CodeResume"
homepage = "https://github.com/ruiyli/CodeResume"
categories = ["config"]
keywords = ["configuration", "settings", "ai", "config"]

[dependencies]
cr-core.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
