[package]
name = "cr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core data types and models for CodeResume resume generation"
repository = "https://github.com/ruiyli/CodeResume"
homepage = "https://github.com/ruiyli/CodeResume"
categories = ["data-structures"]
keywords = ["resume", "cv", "data-model", "typst"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
