[package]
name = "cr-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Typst-based PDF and Markdown rendering engine for resumes"
repository = "https://github.com/ruiyli/CodeResume"
homepage = "https://github.com/ruiyli/CodeResume"
categories = ["text-processing", "graphics"]
keywords = ["resume", "pdf", "typst", "markdown", "rendering"]

[dependencies]
cr-core.workspace = true
cr-io.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true
